# image-mover

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-31-image-mover.md
docs/superpowers/specs/: 2026-05-31-image-mover-design.md
image_mover/core/: cache.py  deduplicator.py  hasher.py  models.py  organizer.py  scanner.py
image_mover/ui/: app.py  main_window.py
image_mover/ui/dialogs/: consolidate_dialog.py  migrate_dialog.py  scan_dialog.py  settings_dialog.py
image_mover/ui/panes/: files_pane.py  preview_pane.py  sources_pane.py
image_mover/ui/workers/: move_worker.py  scan_worker.py
tests/: conftest.py
tests/core/: test_cache.py  test_deduplicator.py  test_hasher.py  test_models.py  test_organizer.py  test_scanner.py
tests/workers/: test_move_worker.py  test_scan_worker.py
