[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-mover"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "pymongo>=4.6",
    "exifread>=3.0",
]

[project.scripts]
image-mover = "image_mover.ui.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4", "mongomock>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
